# ChatVault.ai

./: README.md  setup.sh
apps/api/: README.md  env.example  pyproject.toml  quanta_copilot.db
apps/api/src/: config.py  deps.py  main.py  models.py
apps/api/src/routes/: bots.py  chat.py  ingest.py  status.py  uploads.py
apps/api/src/services/: chunking.py  crawl.py  embed.py  index.py  index_faiss.py  parsing.py  rag.py
apps/api/src/utils/: tasks.py
apps/api/src/workers/: celery_app.py  tasks.py
apps/web/: README.md  next.config.js  package-lock.json  package.json  theme.js
apps/web/app/: layout.js  page.js
apps/web/app/chat/[slug]/: page.js
apps/web/components/: BotHeader.jsx  ChatBox.jsx  LibraryTable.jsx  SourcesPopover.jsx  UploadZone.jsx
